# musicbrainz_rs

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  cog.toml  dependabot.yml
.github/workflows/: Release.yaml  rust_check.yaml
documentation/: contribution_faq.md
examples/async/: browse.rs  fetch_artist.rs  fetch_release_coverart.rs  includes.rs  search_artist.rs  set_user_agent.rs
examples/blocking/: browse.rs  fetch_artist.rs  fetch_release_coverart.rs  includes.rs  search_artist.rs  set_user_agent.rs
src/: client.rs  config.rs  error.rs  lib.rs  rate_limit.rs  utils.rs
src/deserialization/: browse_deserializer.rs  coordinate_deserializer.rs  date_format.rs  mod.rs  search_deserializer.rs
src/entity/: alias.rs  annotation.rs  api.rs  area.rs  artist.rs  artist_credit.rs  cdstub.rs  coverart.rs  discid.rs  event.rs  genre.rs  instrument.rs  label.rs  lifespan.rs  mod.rs  place.rs  rating.rs  recording.rs  relations.rs  release.rs  release_group.rs  search.rs  series.rs  tag.rs  url.rs  work.rs
src/query/: browse.rs  mod.rs  relations.rs
tests/: tests.rs
tests/async_tests/: mod.rs
tests/async_tests/annotation/: annotation_search.rs
tests/async_tests/api/: config.rs  fetch.rs  search.rs
tests/async_tests/area/: area_browse.rs  area_includes.rs  area_search.rs
tests/async_tests/artist/: artist_browse.rs  artist_includes.rs  artist_search.rs
tests/async_tests/cdstub/: cdstub_search.rs
tests/async_tests/discid/: discid_fetch.rs
tests/async_tests/event/: event_browse.rs  event_includes.rs  event_search.rs
tests/async_tests/instrument/: instrument_browse.rs  instrument_includes.rs  instrument_search.rs
tests/async_tests/label/: label_browse.rs  label_includes.rs  label_search.rs
tests/async_tests/place/: place_browse.rs  place_includes.rs
tests/async_tests/recording/: recording_browse.rs  recording_includes.rs  recording_search.rs
tests/async_tests/release/: release_browse.rs  release_coverart.rs  release_includes.rs  release_search.rs
tests/async_tests/release_group/: release_group_browse.rs  release_group_coverart.rs  release_group_includes.rs  release_group_search.rs
tests/async_tests/series/: series_browse.rs  series_includes.rs  series_search.rs
tests/async_tests/work/: work_browse.rs  work_includes.rs  work_search.rs
tests/blocking_tests/annotation/: annotation_search.rs
tests/blocking_tests/api/: config.rs  fetch.rs  mod.rs  search.rs
tests/blocking_tests/area/: area_browse.rs  area_includes.rs  area_search.rs
tests/blocking_tests/artist/: artist_browse.rs  artist_includes.rs  artist_search.rs
tests/blocking_tests/cdstub/: cdstub_search.rs
tests/blocking_tests/discid/: discid_fetch.rs  mod.rs
tests/blocking_tests/event/: event_browse.rs  event_includes.rs  event_search.rs
tests/blocking_tests/instrument/: instrument_browse.rs  instrument_includes.rs  instrument_search.rs
tests/serde/: mod.rs  roundtrip.rs.in
(+59 files in other folders)
